# rust_vint

./: .gitignore  Cargo.toml  index.html
benches/: bench.rs
decode throughput, max_val 16_000/baseline/1/base/: estimates.json  sample.json  tukey.json
decode throughput, max_val 16_000/baseline/1/change/: estimates.json
decode throughput, max_val 16_000/baseline/1/new/: estimates.json  sample.json  tukey.json
decode throughput, max_val 16_000/baseline/1/report/: index.html
decode throughput, max_val 16_000/baseline/2/base/: estimates.json  sample.json  tukey.json
decode throughput, max_val 16_000/baseline/2/change/: estimates.json
decode throughput, max_val 16_000/baseline/report/: index.html
decode throughput, max_val 16_000/report/: index.html
decode throughput, max_val 16_000/snappy/report/: index.html
decode throughput, max_val 16_000/vint most common/report/: index.html
decode throughput, max_val 16_000/vint/report/: index.html
decode throughput, max_val 16_000/vint_fixed/report/: index.html
encode throughput, max_val 16_000/baseline/report/: index.html
encode throughput, max_val 16_000/report/: index.html
encode throughput, max_val 16_000/snappy/report/: index.html
encode throughput, max_val 16_000/vint most common/report/: index.html
encode throughput, max_val 16_000/vint/report/: index.html
encode throughput, max_val 16_000/vint_fixed/report/: index.html
src/: average_delta_encoded.rs  bitpacked_ra.rs  bitpacked_ra_step.rs  lib.rs  ser.rs  util.rs  vint.rs  vint_encode_most_common.rs  vint_fixed.rs
tests/: quick_check.rs
(+528 files in other folders)
