[package]
name = "vint"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]

[dependencies]
itertools = "0.7.8"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
quickcheck = "0.6"
quickcheck_macros = "0.6"
criterion = "0.2.2"
snap = "0.2"
rand = "0.4"
bitpacking = "0.4.0"
serde_derive = "1.0"
serde_bytes = "0.10.4"
serde = "1.0"
byteorder = "1.2.2"
bincode = "1.0.0"
bitfield = "0.12.1"
mayda = {git = "https://github.com/PSeitz/mayda"}