[package]
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
name = "vint"
version = "0.1.0"
[[bench]]
harness = false
name = "bench"

[dependencies]
itertools = "0.7.8"

[dev-dependencies]
bincode = "1.0.1"
bitpacking = "0.5.1"
byteorder = "1.2.6"
criterion = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.5.5"
serde = "1.0.79"
serde_bytes = "0.10.4"
serde_derive = "1.0.79"
snap = "0.2.5"

